[gd_scene load_steps=2 format=3 uid="uid://quick_draw"]

[ext_resource type="Script" path="res://scripts/games/quick_draw.gd" id="1_qdraw"]

[node name="QuickDraw" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qdraw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.08, 0.12, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quick Draw"

[node name="RoundLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Round 1/3"

[node name="Spacer" type="Control" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimerLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "60"

[node name="WordSection" type="VBoxContainer" parent="VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 5

[node name="WordPromptLabel" type="Label" parent="VBox/WordSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Draw:"
horizontal_alignment = 1

[node name="WordLabel" type="Label" parent="VBox/WordSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.9, 0.6, 0.2, 1)
text = "ELEPHANT"
horizontal_alignment = 1

[node name="CanvasSection" type="PanelContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="DrawingCanvas" type="Control" parent="VBox/CanvasSection"]
clip_contents = true
layout_mode = 2
mouse_filter = 0

[node name="CanvasBackground" type="ColorRect" parent="VBox/CanvasSection/DrawingCanvas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(1, 1, 1, 1)

[node name="ToolsSection" type="HBoxContainer" parent="VBox"]
visible = false
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="BlackButton" type="Button" parent="VBox/ToolsSection"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "B"

[node name="RedButton" type="Button" parent="VBox/ToolsSection"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "R"

[node name="BlueButton" type="Button" parent="VBox/ToolsSection"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
text = "B"

[node name="GreenButton" type="Button" parent="VBox/ToolsSection"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.5, 0, 1)
text = "G"

[node name="YellowButton" type="Button" parent="VBox/ToolsSection"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0, 1)
text = "Y"

[node name="Spacer" type="Control" parent="VBox/ToolsSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UndoButton" type="Button" parent="VBox/ToolsSection"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "Undo"

[node name="ClearButton" type="Button" parent="VBox/ToolsSection"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "Clear"

[node name="GuessSection" type="VBoxContainer" parent="VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="GuessInput" type="LineEdit" parent="VBox/GuessSection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Type your guess..."
alignment = 1
max_length = 50

[node name="SubmitGuessButton" type="Button" parent="VBox/GuessSection"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Guess!"

[node name="FeedbackLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1

[node name="PlayersStatus" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 15

[node name="StartRoundSection" type="VBoxContainer" parent="VBox"]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="NextDrawerLabel" type="Label" parent="VBox/StartRoundSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Next drawer:"
horizontal_alignment = 1

[node name="DrawerNameLabel" type="Label" parent="VBox/StartRoundSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.9, 0.6, 0.2, 1)
text = "Player Name"
horizontal_alignment = 1

[node name="StartRoundButton" type="Button" parent="VBox/StartRoundSection"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Start Drawing!"

[node name="WaitingLabel" type="Label" parent="VBox/StartRoundSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "Waiting for drawer to start..."
horizontal_alignment = 1

[node name="CorrectGuessOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="OverlayContent" type="VBoxContainer" parent="CorrectGuessOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CorrectLabel" type="Label" parent="CorrectGuessOverlay/OverlayContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
text = "Correct!"
horizontal_alignment = 1

[node name="GuesserNameLabel" type="Label" parent="CorrectGuessOverlay/OverlayContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Player guessed it!"
horizontal_alignment = 1

[node name="PointsLabel" type="Label" parent="CorrectGuessOverlay/OverlayContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "+150 points"
horizontal_alignment = 1

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = false

[node name="TickTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = false
autostart = false

[node name="OverlayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = false
